methods.slug.SlugTracking.scala.code
override def run() {
  
def isFacingTrail():Boolean = {
  	if (isFacingWall()) {
      return false
    }
    forward()
  	if (getGroundColor()==Color.green) {
      return true
    } else {
      return false
    }
  	backward()
}
ifFacingTrail()
while (!isOverBaggle()) {
	while (!isFacingTrail()) {
  	left()
  }
  forward()
}
pickupBaggle()
}